--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "xml2js": "^0.6.2"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
